# spreadsheet_upload_tool

./: .#README.md  .gitignore  LICENSE  README.md  config.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  requirements.txt  sql_app.db
.github/workflows/: deploy_on_push.yml  docker.yml  fastapi_app.yml  python_app.yml
app/: test_data.csv
app/api/: auth.py  fileupload.py  users.py
app/core/: security.py  settings.py
app/models/: database.py  user.py
app/sql_db/: crud.py  database.py
backend-app/: Dockerfile  Dockerfile.dev  Dockerfile.prod  pyproject.toml  requirements.txt
backend-app/app/: example.env  main.py
backend-app/app/api/: auth.py  fileupload.py  users.py
backend-app/app/core/: security.py
backend-app/app/models/: database.py  db_utils.py  file_db.py  token.py  user.py
backend-app/app/sql_db/: crud.py  database.py  file_crud.py  file_database.py
backend-app/tests/unit/: conftest.py  test_auth.py  test_crud.py  test_filedb_crud.py  test_fileupload.py  test_users.py
frontend-app/: .env.production  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend-app/app/: layout.tsx  page.tsx
frontend-app/app/login/: page.tsx
frontend-app/app/uploader/: page.tsx
frontend-app/components/: file-upload-form.tsx  icons.tsx  main-nav.tsx  site-header.tsx  user-auth-form.tsx  user-reg-form.tsx
frontend-app/components/ui/: button.tsx
frontend-app/config/: site.ts
frontend-app/src/: App.js
frontend-app/src/components/: Homepage.js  Login.js  (+1 more)
frontend-app/styles/: globals.css
(+2 files in other folders)
